--- a/2/index.html
+++ b/2/index.html
@@ -1,4 +1,4 @@
-NIM :1922500146
-Nama : Rikadeliza Fabelia
-Kelompok :SI5B
+NIM :1922500146<br>
+Nama : Rikadeliza Fabelia<br>
+Kelompok :SI5B<br>
 
