--- a/2/index.html
+++ b/2/index.html
@@ -2,3 +2,9 @@ NIM :1922500146<br>
 Nama : Rikadeliza Fabelia<br>
 Kelompok :SI5B<br>
 
+<p>Adapun kesimpulan saya pada pertemuan 2 adalah sebagai berikut:</p>
+Mengerti cara menambahkan paragraf pada pertemuan ke-2 ini
+<ol>
+  <li>Mengerti cara mengimport database yang ada</li>
+  <li>Mengerti cara menggunakan github yang baik dan benar</li>
+</ol>
