--- a/2/index.html
+++ b/2/index.html
@@ -4,6 +4,7 @@ Kelompok :SI5B<br>
 
 <p>Adapun kesimpulan saya pada pertemuan 2 adalah sebagai berikut:</p>
 <ol>
+  <li>Akses database http://localhost/si5b2122o</li>
   <li>Mengerti cara menambahkan paragraf pada pertemuan ke-2 ini</li>
   <li>Mengerti cara mengimport database yang ada</li>
   <li>Mengerti cara menggunakan github yang baik dan benar</li>
