--- a/6/index.html
+++ b/6/index.html
@@ -5,7 +5,7 @@ Kelompok :SI5B<br>
 <p>Pada pertemuan ke-6 kesimpulan dari materi yang dapat diambil yaitu :</p>
 <ol>
   <li>ada 3 cara install plugin sama seperti tema:</li>
-  <li>pertama, langsung online <a href="https://WordPress.org/Plugins" target="_blank">https://WordPress.org/Plugins atau <a href="https:https://themeforest.net/category/wordpress target="_blank">https://wordpress.orgthemes</a></li>
+  <li>pertama, langsung online <a href="https://WordPress.org/Plugins" target="_blank">https://WordPress.org/Plugins atau <a href="https://themeforest.net/category/wordpress" target="_blank">https://wordpress.orgthemes</a></li>
   <li>kedua, setelah itu unggah zip file plugin</li>
   <li>ketiga, lalu pindahkan folder pluginnya</li>
   <li>serta pilih plugin, plugin terpasang dan download plugin:</li>
